--- a/doc-Managing_Providers/topics/Adding_an_Atomic_Enterprise_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_Atomic_Enterprise_Provider.adoc
@@ -18,6 +18,6 @@ IMPORTANT: The [label]#Hostname# must use a unique fully qualified domain name.
 . Select the appropriate [label]#Zone# for the provider.
   By default, the zone is set to [label]#default#. 
 . Under #Credentials#, enter the token in the [label]#Token# field. 
-* Click btn:[Validate] to confirm that the CloudForms Management Engine can connect to the OpenShift provider using the provided token. 
+* Click btn:[Validate] to confirm that the CloudForms Management Engine can connect to the Atomic Enterprise provider using the provided token. 
 . Click btn:[Add].
 
