Edit per Itamar's input

--- a/doc-Managing_Providers/Containers_Providers.adoc
+++ b/doc-Managing_Providers/Containers_Providers.adoc
@@ -77,6 +77,8 @@ To collect the `nodes`, `pods`, and `containers` metrics, it is required to run 
 
 NOTE: Use the OpenShift master public host name as the `HAWKULAR_METRICS_HOSTNAME`, at the moment a limitation in CloudForms Management Engine is assuming that the provider *Host Name* is used also to collect the metrics.
 
+NOTE: For the metrics collection to work properly, you also need to configure the CloudForms Management Engine to allow for all three +Capacity & Utilization+ server roles which are available under menu:Configure[Configuration > Server > Server Control]. For more information on capacity and utilization collection, see the _Deployment Planning Guide_ available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
+
 Once http://www.hawkular.org/[Hawkular Metrics] and https://github.com/kubernetes/heapster[Heapster] have been successfully deployed by OpenShift Metrics, it is possible to create a router for CloudForms Management Engine to access the metrics data:
 
     oadm router management-metrics \
