--- a/doc-Managing_Providers/topics/Editing_a_Containers_Provider.adoc
+++ b/doc-Managing_Providers/topics/Editing_a_Containers_Provider.adoc
@@ -1,6 +1,6 @@
 = Editing a Containers Provider
 
-Edit information about a provider such as the name, hostname or IP address, and credentials. 
+Edit information about a provider such as the name, hostname, IP address or port, and credentials.
 
 .Procedure: To Edit a Containers Provider
 . Navigate to menu:Containers[Providers]. 
