--- a/doc-Managing_Providers/topics/Removing_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Removing_Containers_Providers.adoc
@@ -1,6 +1,6 @@
 = Removing Containers Providers
 
-A containers provider might require removal from the VMDB if it is no longer in use. 
+You may require to remove a containers provider from the VMDB if the provider is no longer in use.
 
 .Procedure: To Remove Containers Providers
 . Navigate to menu:Containers[Providers]. 
