--- a/doc-Managing_Providers/topics/Tagging_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Containers_Providers.adoc
@@ -7,7 +7,7 @@ Before assigning tags, create them using instructions in the _General Configurat
 . Navigate to menu:Containers[Providers]. 
 . Select the checkboxes for the containers providers to tag. 
 . Click  image:images/1941.png[] btn:[Policy], and then  image:images/2158.png[] btn:[Edit Tags]. 
-. Select a customer tag to assign from the drop-down menu. 
+. Select a tag to assign from the drop-down menu. 
 +
 image::images/2219.png[]
 +
