--- a/doc-General_Configuration/My_Settings.adoc
+++ b/doc-General_Configuration/My_Settings.adoc
@@ -158,7 +158,7 @@ To Set Default Filters for containers:
 
 ==== Setting Default Filters for Infrastructure
 
-To Set Default Filters for Infrastucture:
+To Set Default Filters for Infrastructure:
 
 . Navigate to +Configure → My Settings+, then click on the +Default Filters+ tab.
 . In the +Infrastructure+ folder, select the default filters that you want available. Items that have changed show in blue, bold text. Not all filters are listed in the figure below.
