--- a/doc-General_Configuration/Configuration.adoc
+++ b/doc-General_Configuration/Configuration.adoc
@@ -655,7 +655,7 @@ To Enable the snmpd and snmptrapd Daemons"
 
 To Enable the Notifier Role:
 
-. Access each SNMP processing appliance using their web interaces.
+. Access each SNMP processing appliance using their web interfaces.
 . Navigate to +Configure → Configuration → Settings+.
 . Select the zone where the EVM server is located, and select the EVM server.
 . In the +Server Control+ area, select the +Notifier+ server role.
