--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -204,7 +204,7 @@ a template and create a virtual machine. Use the following procedure as a
 guide.
 
 
-. Import the appliance image from the export storage domain as a template in a Red Hat Enterprise Virtualization data storage domain. Use the +newimagename+ you specified when you upoloaded the image to find the image to import as a template. Once the import is complete, check the template for a network interface (NIC). If the template does not include one, create a NIC for it.
+. Import the appliance image from the export storage domain as a template in a Red Hat Enterprise Virtualization data storage domain. Use the +newimagename+ you specified when you uploaded the image to find the image to import as a template. Once the import is complete, check the template for a network interface (NIC). If the template does not include one, create a NIC for it.
 . Create a new virtual machine using the CloudForms Management Engine Appliance template as a basis. See the Red Hat Enterprise Virtualization Administrator Guide for instructions.
 . Add a database disk if you are hosting the database on the same machine as the appliance.
 . Start the newly created CloudForms Management Engine Appliance virtual machine.
