--- a/doc-Integration_with_Red_Hat_Satellite/Reprovisioning_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Reprovisioning_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
@@ -1,7 +1,7 @@
 [[Reprovisioning_a_Bare_Metal_Host_in_Red_Hat_CloudForms]]
 == Reprovisioning a Bare Metal Host in Red Hat CloudForms
 
-The current inventory of your Red Hat Satellite 6 server is now visable in Red Hat CloudForms Management Engine. The next procedure is an example of reprovisioning an existing bare metal system into a new hostgroup. For this example, your Red Hat Satellite 6 environment requires the following:
+The current inventory of your Red Hat Satellite 6 server is now visible in Red Hat CloudForms Management Engine. The next procedure is an example of reprovisioning an existing bare metal system into a new hostgroup. For this example, your Red Hat Satellite 6 environment requires the following:
 
 - An existing bare metal system stored as a host object in your Red Hat Satellite 6 server. This system can either:
 ** A standalone system previously provisioned without a host group.
@@ -25,17 +25,17 @@ The current inventory of your Red Hat Satellite 6 server is now visable in Red H
 .. This form also contains optional fields for users to enter a plain text +Note+ to inform Red Hat CloudForms administrators of any special details and a field their manager's Name in case administrators require approval from a user's manager.
 . Select the +Purpose+ tab and select any Red Hat CloudForms policy tags that apply to the system.
 . Select the +Catalog+ tab. This screen displays the list of chosen machines to reprovision and their current details. Select a +target host group+ from the +Configuration Profile list+. Red Hat CloudForms communicates to Red Hat Satellite to apply the configuration from this host group to the selected host and reprovision the system.
-. Select the +Customise+ tab. This screen displays some customizable fields for the selected system. You can change the +Root Password+ or change the +Hostname+ and +IP Address+. Note that these fields are optional as the host group in Red Hat Satellite 6 contains this information. The fields here will override the settings from the hostgroup.
+. Select the +Customize+ tab. This screen displays some customizable fields for the selected system. You can change the +Root Password+ or change the +Hostname+ and +IP Address+. Note that these fields are optional as the host group in Red Hat Satellite 6 contains this information. The fields here will override the settings from the hostgroup.
 +
 [IMPORTANT]
 ======
 Provisioning bare metal systems still requires access to the network that Red Hat Satellite 6 manages. This is because Red Hat Satellite controls PXE booting, kickstarts, and Puppet configuration for bare metal systems. Ensure the IP address you enter in Red Hat CloudForms Management Engine can access a DHCP service that Red Hat Satellite 6 provides either through the main server or through a Red Hat Satellite 6 Capsule server.
 ======
 +
-. Select the +Customise+ tab. This screen allows you to either launch the provisioning process Immediately on Approval or using a schedule. Click +Schedule+ to show the date and time fields you use to schedule the provisioning.
+. Select the +Customize+ tab. This screen allows you to either launch the provisioning process Immediately on Approval or using a schedule. Click +Schedule+ to show the date and time fields you use to schedule the provisioning.
 . When you have completed all sections of the provisioning form, click +Submit+.
 
-This submits the provisioning request. Depending on the request settings on your Red Hat CloudForms appliance, this provisioning request might require approval from an administrator. If not, the provisioning request launches depending on your choce for the Schedule.
+This submits the provisioning request. Depending on the request settings on your Red Hat CloudForms appliance, this provisioning request might require approval from an administrator. If not, the provisioning request launches depending on your choice for the Schedule.
 
 [NOTE]
 ======
