Modified content to address the two use cases for creating a region.

--- a/doc-General_Configuration/Configuration.adoc
+++ b/doc-General_Configuration/Configuration.adoc
@@ -2332,9 +2332,15 @@ All CFME databases in a multi-region deployment must use the same security key.
 
 ===== Creating a Region
 
+In most cases, a region is created when you are deploying your CFME environment; essentially, on the first Appliance for the region.
 The process of creating a region takes a few minutes. The database is dropped and rebuilt to accommodate the region numbers.
 
-To Create a Region:
+[NOTE]
+======
+To configure a database for CFME, follow the procedure described https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/installing-cloudforms-on-red-hat-enterprise-linux-openstack-platform/#configuring_a_database[here].
+======
+
++To create a region+:
 
 . Start the appliance and log in to the black appliance console with a user name of admin and the default password. The +Appliance Summary Screen+ displays.
 . Press +Enter+ to manually configure settings.
