--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -123,3 +123,6 @@ Red Hat CloudForms is fully supported on Red Hat Enterprise Linux 7.1.
 Red Hat recommends delaying upgrades of Red Hat CloudForms 4.0 appliances to
 Red Hat Enterprise Linux 7.2 until the first Red Hat CloudForms 4.0 advisory
 is released noting Red Hat Enterprise Linux 7.2 support.
+
+Automate Server Role::
+In the previous version of CloudForms Management Engine, the Automate Server Role was disabled by default. Automate is required for many areas of the product, such as virtual machines, services, orchestration provisioning, custom buttons, retirement, etc. In the latest version of CloudForms Management Engine, the Automate Server Role is enabled by default. Users can still disable the role on appliances as needed.
