--- a/doc-Release_Notes/known_issues.adoc
+++ b/doc-Release_Notes/known_issues.adoc
@@ -7,7 +7,7 @@ BZ#link:https://bugzilla.redhat.com/1225541[1225541]
 
 [subs="verbatim,quotes"]
 ----
-At current, attempting to perform a Smart State analysis of a VMware vSphere 6 virtual machine with Virtual Disk Development Kit 6.0 returns an 'Unable to determine port' error, causing the analysis to fail. As a workaround, use Virtual Disk Development Kit 5.5, or use the following procedure to install Virtual Disk Development Kit version 6.0 or above:
+At current, attempting to perform a Smart State analysis of a VMware vSphere 6 virtual machine with Virtual Disk Development Kit 6.0 returns an 'Unable to determine port' error, causing the analysis to fail. This occurs because this version of the VDDK is not installed in the directory where CFME expects it. By installing VDDK 6.0 in the appropriate directory, this is resolved.
 
 1. Download VDDK 6.0 from the VMware website.
 2. Copy the downloaded GZIP file to the +/tmp+ directory on the appliance.
