--- a/doc-General_Configuration/Configuration.adoc
+++ b/doc-General_Configuration/Configuration.adoc
@@ -2340,7 +2340,7 @@ The process of creating a region takes a few minutes. The database is dropped an
 To configure a database for CFME, follow the procedure described https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/installing-cloudforms-on-red-hat-enterprise-linux-openstack-platform/#configuring_a_database[here].
 ======
 
-+To create a region+:
++To Create a Region+:
 
 . Start the appliance and log in to the black appliance console with a user name of admin and the default password. The +Appliance Summary Screen+ displays.
 . Press +Enter+ to manually configure settings.
