--- a/doc-General_Configuration/Configuration.adoc
+++ b/doc-General_Configuration/Configuration.adoc
@@ -2332,11 +2332,11 @@ All CFME databases in a multi-region deployment must use the same security key.
 
 ===== Creating a Region
 
-In most cases, a region is created when you are deploying your CFME environment; essentially, on the first Appliance for the region.
-The process of creating a region takes a few minutes. The database is dropped and rebuilt to accommodate the region numbers.
+Use this procedure to create a region on a CloudForms Management Engine (CFME) Appliance that already has a database. The process of creating a region takes a few minutes. The database is dropped and rebuilt to accommodate the region numbers.
 
 [NOTE]
 ======
+In most cases, a region is created when you are deploying your CFME environment; essentially, on the first Appliance for the region. 
 To configure a database for CFME, follow the procedure described https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/installing-cloudforms-on-red-hat-enterprise-linux-openstack-platform/#configuring_a_database[here].
 ======
 
